dashboard: temp fix for status card icons
Status card icons are misaligned on their row. It's a PatternFly
bug (https://patternfly.atlassian.net/browse/PTNFLY-1579 is fixed)
and this is a temporary workaround.

Bug-Url: https://bugzilla.redhat.com/1347009

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -4,3 +4,8 @@
 .heatmap-container rect {
     cursor: pointer;
 }
+/* TODO (gs) -- remove this when https://patternfly.atlassian.net/browse/PTNFLY-1579 is fixed */
+.card-pf-aggregate-status-notification .pficon-warning-triangle-o {
+    position: relative;
+    top: 2px;
+}
